update init.lua (PYTHONPATH) and tmux (C-a prefix)

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,11 +9,11 @@ set -g mouse on
 # Отключение стандартного префикса tmux (Ctrl-b)
 unbind C-b
 
-# Установка нового префикса на Ctrl-Space
-set -g prefix C-Space
+# Установка нового префикса на Ctrl-/
+set -g prefix C-a
 
 # Привязка нового префикса для отправки команды префикса
-bind C-Space send-prefix
+bind C-a send-prefix
 
 # Выбор панели в стиле Vim с использованием клавиш h, j, k, l
 bind h select-pane -L  # Переместиться к панели слева
