--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,6 @@
 # Включение поддержки 24-битных цветов
 set-option -sa terminal-overrides ",xterm*:Tc"
+set -g default-terminal "tmux-256color"
 
 # Поддержка мыши
 set -g mouse on
