add Telescope alternative, upd tmux keymap, oil show hidden files

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -6,9 +6,9 @@ set -g default-terminal "tmux-256color"
 set -g mouse on
 
 # Установка нового префикса на Ctrl-A
-unbind C-b
-set -g prefix C-a
-bind C-a send-prefix
+# unbind C-b
+# set -g prefix C-a
+# bind C-a send-prefix
 
 # Выбор панели в стиле Vim
 bind h select-pane -L
